--- a/12_html/3_표관련태그.html
+++ b/12_html/3_표관련태그.html
@@ -4,6 +4,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <style>
+        thead{
+            background-color: blueviolet;
+        }
+        tbody{
+            background-color: rgba(red, green, blue, alpha);
+        }
+        tfoot{
+            background-color: yellow;
+        }
+    </style>
 </head>
 <body>
     <!-- 표 관련 태그 -->
