하이퍼 미디어관련 예제 코드 실습

--- a/12_html/5_이미지관련태그.html
+++ b/12_html/5_이미지관련태그.html
@@ -34,6 +34,7 @@
         <area shape="rect" coords="300,0,600,500" href="http://www.google.com" target="_blank">
     </map>
 
+    <!-- 이미지와 설명은 가급적 figure 태그 안에 묶어서 설명 부분은 figcaption에 작성하자. (SEO, crawling)-->
     <figure>
         <img src="sample/image/tower1.PNG" width="600px" height="300px">
         <figcaption>
