css 레이아웃스타일2 까지 예제 코드

--- a/13_css/08_배경스타일.html
+++ b/13_css/08_배경스타일.html
@@ -51,6 +51,7 @@
 
             background-position: 50% 50%;
             background-position: 30px 50px;
+            background-position: right;
         }
     </style>
     <title>Document</title>
