--- a/14_js/03_javascript_browser/05_async-intro.html/01_intro/02_callback-hell.html
+++ b/14_js/03_javascript_browser/05_async-intro.html/01_intro/02_callback-hell.html
@@ -18,6 +18,15 @@
 
         // increase(0, result => {console.log(result)});
 
+        /*
+            여러번 순차적으로 비동기 함수 호출의 결과물을 다음 콜백함수로 던지기 위해서는
+            콜백 중첩을 사용해서 호출해야 한다.
+
+            하지만 이러한 형태는 가독성도 좋지 않고 유지보수도 힘든 피해야 할 패턴(안티 패턴) 중
+            하나이다. 이러한 형태를 콜백 지옥(callback hell)이라고 하고 사용하지 않도록 하자.
+            (fetch, async await, axios(라이브러리 필요))
+        */
+
         increase(0, result => {
             console.log(result);
             increase(result, result => {
