--- a/14_js/03_javascript_browser/05_async-intro.html/01_intro/03_promise.html
+++ b/14_js/03_javascript_browser/05_async-intro.html/01_intro/03_promise.html
@@ -57,6 +57,15 @@
         })
         .catch(error => console.log(error))
         .finally(() => console.log('반드시 실행되고 반드시 해야 할 작업'));
+
+        /*
+            then: 이전 작업의 성공적으로 완료 되었을 때 promise에 담긴 성공(resolve에 담긴)을
+                  추출하여 확인하는 콜백함수가 동작하는 메소드
+            catch: 이전 작업이 실패했을 때(에러 발생 시) promise에 담긴 실패(reject에 담긴)를
+                   추출하여 콜백함수가 동작하는 메소드
+            finally: 비동기 작업이 성공하든 실패하든 상관없이 항상 콜백함수가 동작ㅎ하는 메소드
+            (이 메소들을 통해 들여쓰기가 줄어들어 가독성이 좋아지고 유지보수성이 향상된다.)
+        */
     </script>
 </body>
 </html>
