vue 반복문까지 예제 코드

--- a/15_vue/02_Template/01_AttributeBinding.html
+++ b/15_vue/02_Template/01_AttributeBinding.html
@@ -48,13 +48,13 @@
                 const dynamicId = ref('vue');
                 const value = ref('test');
                 const skipId = ref('skipId');
-                const skipvalue = ref('skipValue');
+                const skipValue = ref('skipValue');
 
                 return{
                     dynamicId,
                     value,
                     skipId,
-                    skipvalue
+                    skipValue
                 }
             }
         }).mount("#step01") ;
