--- a/15_vue/02_Template/02_ClassBindings.html
+++ b/15_vue/02_Template/02_ClassBindings.html
@@ -18,14 +18,20 @@
 </head>
 <body>
     <div id="step01">
+
+        <!-- class 어트리뷰트는 주어진 객체의 프로퍼티 값이 true인 프로퍼티 키를 클래스명으로 가질 수 있다. -->
         <div :class="{active: isActive, static: isSize}">
             {{ isActive }} <br>
             {{ isSize }}
         </div>
     </div>
 
+    <div id="step02">
+        <div :class="classObj">{{ classObj }}</div>
+    </div>
+
     <script>
-        const {createApp, ref} = Vue;
+        const {createApp, ref, reactive} = Vue;
 
         createApp({
             setup(){
@@ -38,6 +44,22 @@
                 }
             }
         }).mount("#step01");
+
+        createApp({
+            setup(){
+                const isActive = ref(true);
+                const isSize = ref(true);
+                const classObj = reactive({
+                    active: isActive,
+                    static: isSize
+                });
+
+                return{
+                    classObj
+                }
+            }
+        }).mount("#step02");
+        
     </script>
 </body>
 </html>
