--- a/15_vue/02_Template/05_loopRendering.html
+++ b/15_vue/02_Template/05_loopRendering.html
@@ -55,6 +55,13 @@
         </ul>
     </div>
 
+    <!--
+        :key
+        Vue가 렌더링된 요소 목록을 업데이트 할 때 v-for는 기본적으로 반복되어 나온 DOM요소들 전체를 확인하게 된다.
+        이 때 Vue가 각 노드의 id를 추적할 수 있도록 힌트를 주고 기존 요소를 재사용하여 순서를 변경함에 있어
+        용이하게 하기 위해서 key라는 정보를 제공하면 성능상 이점을 가져갈 수 있다.
+        (사실상 반복문에서 필수로 적게된다.)
+    -->
     <div id="step05">
         <div v-for="item in items" :key="item.id">
             {{ item.id }} - {{ item.name }}
