--- a/15_vue/03_Reactivity/03_DeepReactivity.html
+++ b/15_vue/03_Reactivity/03_DeepReactivity.html
@@ -35,6 +35,8 @@
                     {name: "Banana", price: 3000},
                     {name: "Pineapple", price: 4000}
                 ]);
+
+                /* 모든 반응형 변수는 초기에 값이 없더라도 해당 타입의 초기값은 넣자! */
                 const basket = ref([]);
                 const totalPrice = ref(0);
 
