--- a/15_vue/03_Reactivity/01_Click.html
+++ b/15_vue/03_Reactivity/01_Click.html
@@ -33,7 +33,7 @@
     <div id="step04">
         <!-- 1. prevent: 이벤트가 추가된 태그에 개본 이벤트가 있다면 무시하고 현재 이벤트만 인정되도록 하는 수정자 -->
         <div>
-            <a href="https://www.naver.com" @click="doSomething">
+            <a href="https://www.naver.com" @click.prevent="doSomething">
                 네이버 안 가고 싶은 a태그
             </a>
         </div>
